--- a/cadastroUsu.html
+++ b/cadastroUsu.html
@@ -31,29 +31,13 @@
                     <input type="date" id="data_nascimento" name="data_nascimento" required>
                 </div>
 
-
                 <div class="form-group">
-                    <label for="responsavel">Responsável:</label>
-                    <select id="responsavel" name="responsavel_id" required>
-                        <option value="">Selecione o responsável</option>
-                        <select id="editarResponsavel" required></select>
-
-
-                    </select>
-                    <a href="Responsavel.html" class="add-responsavel">Adicionar novo responsável</a>
+                    <label for="senha">Senha:</label>
+                    <input type="senha" id="senha" name="senha" placeholder="Digite uma senha" rows="4" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="status">Status:</label>
-                    <select id="status" name="status">
-                        <option value="incompleta">Incompleta</option>
-                        <option value="completa">Completa</option>
-                    </select>
-                </div>
-
-
-                <div class="form-group">
-                    <button type="submit">Salvar Tarefa</button>
+                    <button type="submit">Salvar Cadastro</button>
                 </div>
             </form>
         </div>
